Replaced new Integer() with Integer.valueOf()